--- a/.github/workflows/main_shop-on-the.yml
+++ b/.github/workflows/main_shop-on-the.yml
@@ -8,14 +8,12 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: shop-on-the-f3gucncqgkgyatda
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: .
+      - name: Deploy using ZipDeploy
+        run: |
+          curl -X POST -u "${{ secrets.ZIP_DEPLOY_USER }}:${{ secrets.ZIP_DEPLOY_PASSWORD }}" \
+          --data-binary @site.zip \
+          https://shop-on-the-f3gucncqgkgyatda.scm.azurewebsites.net/api/zipdeploy
